--- a/googlevr.html
+++ b/googlevr.html
@@ -8,6 +8,6 @@
   GitHub <a href="https://github.com/theta360developers/googlevr">https://github.com/theta360developers/googlevr</a>
 <br>
   <iframe width="100%" height="700px" allowfullscreen
-frameborder="0" src="index.html?image=img/beach.jpg&is_stereo=false"></iframe>
+frameborder="0" src="index.html?image=images/vr-test.jpg&is_stereo=false"></iframe>
 </body>
 <html>
